Fixed a couple of things in CSS code for mobile layout: - Changed sidebars to be full-height for better aesthetics - Fixed z-index of context menu and network profile configuration screen - Fixed the width of profile forms, important for narrow screens

--- a/web/mamirc.css
+++ b/web/mamirc.css
@@ -75,7 +75,7 @@ footer {
 	padding: 1.0em 2.0em;
 	box-sizing: border-box;
 	position: absolute;
-	z-index: 1;
+	z-index: 3;
 	overflow-y: auto;
 	background-color: #FFFFFF;
 }
@@ -152,7 +152,7 @@ html.mobile header {
 html.mobile #member-list-container,
 html.mobile #window-list-container {
 	width: 12em;
-	max-height: 100%;
+	height: 100%;
 	padding: 1.0em 0.5em;
 	box-sizing: border-box;
 	position: fixed;
@@ -491,6 +491,7 @@ footer form::after {  /* Workaround mechanism for padding, because padding <text
 
 #menu {
 	position: absolute;
+	z-index: 4;
 	padding: 0.1em;
 	border: 1px solid #C0C0C0;
 	border-radius: 0.2em;
@@ -545,7 +546,7 @@ footer form::after {  /* Workaround mechanism for padding, because padding <text
 }
 
 #network-profiles-container form {
-	max-width: 35em;
+	width: 35em;
 	margin-top: 1.0em;
 	padding: 1.0em 1.2em 1.5em;
 	background-color: #FAFAFA;
